# cohpy.org

./: .gitignore  .travis.yml  Pipfile  README.md  TODO.md  develop-linux  pyproject.toml  requirements.txt
cohpy/: .coverage  pytest.ini  wsgi.py
cohpy/config/: urls.py  wsgi.py
cohpy/config/settings/: base.py  base_cookiecutter.py  dev.py  production.py  test.py
cohpy/fixtures/: initial_data.json  testdata.json
cohpy/functional_tests/: functional_helper.py  test_admin.py  test_home_page.py  test_past_meetups.py  test_resources_page.py
cohpy/htmlcov/: index.html  meetups___init__.html  meetups_admin.html  meetups_migrations_0001_initial.html  meetups_migrations_0002_auto_20150711_2303.html  meetups_migrations_0002_auto_20150810_2329.html  meetups_migrations___init__.html  meetups_models.html  meetups_pytest_fixtures.html  meetups_test_models.html  meetups_test_views.html  meetups_urls.html  meetups_views.html
cohpy/info_blocks/: admin.py  models.py  pytest_fixtures.py  test_models.py  test_views.py  views.py
cohpy/info_blocks/migrations/: 0001_initial.py  0002_dojoinfo.py  0003_auto_20150810_0222.py  0004_auto_20150813_0213.py
cohpy/meetups/: admin.py  models.py  pytest_fixtures.py  test_models.py  test_views.py  urls.py  views.py
cohpy/meetups/migrations/: 0001_initial.py  (+3 more)
cohpy/python_resources/: admin.py  models.py  pytest_fixtures.py  test_models.py  test_views.py  urls.py  views.py
cohpy/templates/: home.html  site_base.html
prod_setup/: README.md  env_template
prod_setup/nginx/: cohpy
prod_setup/uwsgi/: cohpy.ini  uwsgi.conf
(+11 files in other folders)
