[tool.poetry]
name = "cohpy.org"
version = "0.1.0"
description = "CohPy website"
authors = ["snelzing <39928924+snelzing@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
